--- a/src/main.scss
+++ b/src/main.scss
@@ -1,8 +1,27 @@
-html {
-  background-color: rgb(42, 42, 42);
-  color: rgb(201, 201, 201);
+$primary: rgb(67, 132, 216);
+
+body {
+  background-color: rgb(26, 26, 26) !important;
+  color: rgb(210, 210, 210) !important;
 }
 
-h1 {
-  background-color: rgba(224, 46, 46, 0);
+.active {
+  border-radius: 10px !important;
+  background-color: $primary !important;
+}
+
+#page{
+  height: 100vh;
+}
+
+.navbar-nav a{
+  padding: 8px 30px !important;
+}
+
+.mainColor{
+  color: $primary;
+}
+
+button{
+  background-color: $primary !important;
 }
