--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,9 @@
 $primary: rgb(67, 132, 216);
+$dark1: rgb(26, 26, 26);
+$dark2: rgb(39, 39, 39);
 
 body {
-  background-color: rgb(26, 26, 26) !important;
+  background-color: $dark1 !important;
   color: rgb(210, 210, 210) !important;
 }
 
@@ -22,12 +24,16 @@ body {
   color: $primary;
 }
 
+.defaultBg {
+  background-color: $primary;
+}
+
 button{
   background-color: $primary !important;
 }
 
 .projectElement{
-  background-color: rgb(44, 44, 44);
+  background-color: $dark2
 }
 
 .scrollingFrame{
@@ -57,3 +63,25 @@ button{
   padding: 10px;
 }
 
+.formStyling {
+  background-color: $dark2;
+  color: #ffffff;
+  border: 1px solid #444444;
+  border-radius: 5px;
+}
+
+.formStyling::placeholder {
+  color: #9a9a9a;
+}
+
+.formStyling:focus {
+  background-color: $dark2;
+  color: #ffffff;
+  border-color: $primary;
+  outline: none;
+  box-shadow: none;
+}
+
+.darkBg {
+  background-color: $dark2;
+}
