--- a/src/main.scss
+++ b/src/main.scss
@@ -89,3 +89,8 @@ button{
   border: $dark1 3px solid !important;
   border-radius: 10px;
 } 
+
+.aboutMeImage {
+  max-height: 150px;
+  max-width: 100%;
+}
